--- a/Assignment01/assignment1.html
+++ b/Assignment01/assignment1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <script src="javascript.js"></script>
     <title>Assignment 1 - Pavan Samra</title>
     <!-- NOTE: Reference your JavaScript solution here, above the commented out code below -->
     <!--
@@ -25,9 +26,9 @@
     <img src="images/bird.jpg" id="im1">
     <img src="images/cat.jpg" id="im2">
     <img src="images/dog.jpg" id="im3">
-    <a href="www.nhl.com"> NHL </a>
-    <a href="www.ufc.com">UFC</a>
-    <a href="www.nba.com">NBA</a>
+    <a href="http://www.nhl.com"> NHL </a>
+    <a href="http://www.ufc.com">UFC</a>
+    <a href="http://www.nba.com">NBA</a>
 
   </div>
   <div id="middle">
@@ -43,9 +44,9 @@
     <img src="images/bird.jpg" id="im1">
     <img src="images/cat.jpg" id="im2">
     <img src="images/dog.jpg" id="im3">
-    <a href="www.nhl.com"> NHL </a>
-    <a href="www.ufc.com">UFC</a>
-    <a href="www.nba.com">NBA</a>
+    <a href="http://www.nhl.com"> NHL </a>
+    <a href="http://www.ufc.com">UFC</a>
+    <a href="http://www.nba.com">NBA</a>
   </div>
 
   <div id="bottom" class="change">
@@ -61,9 +62,9 @@
     <img src="images/bird.jpg" id="im1">
     <img src="images/cat.jpg" id="im2">
     <img src="images/dog.jpg" id="im3">
-    <a href="www.nhl.com"> NHL </a>
-    <a href="www.ufc.com">UFC</a>
-    <a href="www.nba.com">NBA</a>
+    <a href="http://www.nhl.com"> NHL </a>
+    <a href="http://www.ufc.com">UFC</a>
+    <a href="http://www.nba.com">NBA</a>
   </div>
 
   </body>
