--- a/Assignment01/assignment1.html
+++ b/Assignment01/assignment1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
+<head>
     <script src="javascript.js"></script>
     <title>Assignment 1 - Pavan Samra</title>
     <!-- NOTE: Reference your JavaScript solution here, above the commented out code below -->
@@ -11,17 +11,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/boot.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/daniel-takeuchi/COMP-2015/blob/master/assignments/assignment1/tests/assignment1.test.js"></script>
     -->
-  </head>
-  <body>
-  <div id="top" class="change">
+</head>
+<body>
+<div id="top" class="change">
     <p id="p1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <p id="p2">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <p id="p3">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <img src="images/bird.jpg" id="im1">
     <img src="images/cat.jpg" id="im2">
@@ -30,16 +36,22 @@
     <a href="http://www.ufc.com">UFC</a>
     <a href="http://www.nba.com">NBA</a>
 
-  </div>
-  <div id="middle">
+</div>
+<div id="middle">
     <p id="p1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <p id="p2">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <p id="p3">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <img src="images/bird.jpg" id="im1">
     <img src="images/cat.jpg" id="im2">
@@ -47,17 +59,23 @@
     <a href="http://www.nhl.com"> NHL </a>
     <a href="http://www.ufc.com">UFC</a>
     <a href="http://www.nba.com">NBA</a>
-  </div>
+</div>
 
-  <div id="bottom" class="change">
+<div id="bottom" class="change">
     <p id="p1">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <p id="p2">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <p id="p3">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis hendrerit nunc, ac condimentum massa.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis tortor dui. Morbi auctor sodales elementum.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla venenatis
+        hendrerit nunc, ac condimentum massa.
     </p>
     <img src="images/bird.jpg" id="im1">
     <img src="images/cat.jpg" id="im2">
@@ -65,7 +83,7 @@
     <a href="http://www.nhl.com"> NHL </a>
     <a href="http://www.ufc.com">UFC</a>
     <a href="http://www.nba.com">NBA</a>
-  </div>
+</div>
 
-  </body>
+</body>
 </html>
