--- a/Assignment01/assignment1.html
+++ b/Assignment01/assignment1.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <script src="javascript.js"></script>
+
     <title>Assignment 1 - Pavan Samra</title>
     <!-- NOTE: Reference your JavaScript solution here, above the commented out code below -->
-    <!--
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine.css" />
+    <script src="Assignment1Javascript.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/jasmine-html.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.5.2/boot.min.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/daniel-takeuchi/COMP-2015/blob/master/assignments/assignment1/tests/assignment1.test.js"></script>
-    -->
+    <script type="text/javascript"
+            src="https://cdn.rawgit.com/daniel-takeuchi/COMP-2015/blob/master/assignments/assignment1/tests/assignment1.test.js"></script>
+    <script src="assignment1.test.js"></script>
 </head>
 <body>
 <div id="top" class="change">
