--- a/Lab5/lab5_pavan_samra.html
+++ b/Lab5/lab5_pavan_samra.html
@@ -213,11 +213,8 @@ Student ID: A00891410
             }
 
             if (keycode == 39) {
-                //alert('moving right')
                 moveSelectedLetterRight()
-            }
-
-            else if (keycode == 37) {
+            } else if (keycode == 37) {
                 moveSelectedLetterLeft()
             } else if (keycode == 40) {//down key
                 moveSelectedLetterUpDown(true)
